[gd_scene load_steps=5 format=3 uid="uid://bnlrcdc5wku85"]

[ext_resource type="Script" path="res://Scripts/Product.gd" id="1_lxaum"]

[sub_resource type="BoxMesh" id="BoxMesh_y54ts"]
size = Vector3(0.9, 0.9, 0.9)

[sub_resource type="BoxShape3D" id="BoxShape3D_pbtem"]
size = Vector3(1, 0.2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_tpudm"]

[node name="Product" type="StaticBody3D" groups=["Persist"]]
script = ExtResource("1_lxaum")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_y54ts")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("BoxShape3D_pbtem")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_tpudm")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0714, 0)
billboard = 1
font_size = 30

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
